--- a/.env.examle
+++ b/.env.examle
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:preview@localhost:3306/cms"
+DATABASE_URL="mysql://[name]:[password]@localhost:3306/[database]"
 MODE="development"
